feat: add popular course, member say, plan

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <!--end learning-process -->
 <!--popular course-->
 <div class="popular_course container-100">
-    <div class="head">
+    <div class="content-head">
         <p class="title">Popular Course</p>
         <p class="more"><a href="#" class="more-link">See More Course</a></p>
     </div>
@@ -150,7 +150,217 @@
 </div>
 <!--end popular course-->
 <!--professional instructor-->
-
+<div class="professional container-100">
+    <div class="content-head">
+        <p class="title">Professional Instructor</p>
+        <p class="more"><a href="#" class="more-link">See More Instructor</a></p>
+    </div>
+    <div class="course">
+        <div class="course-item">
+            <img src="./img/pro-dianne.png" alt="" class="prof-item-img">
+            <div class="prof_infor">
+                <p class="prof_infor-title">Dianne Russell</p>
+                <p class="prof_infor-left">Marketing Director</p>
+                <p class="prof_infor-right">100+ Classes</p>
+            </div>
+        </div>
+        <div class="course-item">
+            <img src="./img/pro-kathryn.png" alt="" class="prof-item-img">
+            <div class="prof_infor">
+                <p class="prof_infor-title">Kathryn Murphy</p>
+                <p class="prof_infor-left">UI/UX Designer</p>
+                <p class="prof_infor-right">80+ Classes</p>
+            </div>
+        </div>
+        <div class="course-item">
+            <img src="./img/pro-jerome.png" alt="" class="prof-item-img">
+            <div class="prof_infor">
+                <p class="prof_infor-title">Jerome Bell</p>
+                <p class="prof_infor-left">Senior Data Analyst</p>
+                <p class="prof_infor-right">60+ Classes</p>
+            </div>
+        </div>
+    </div>
+</div>
 <!--end professional instructor-->
+<!--why choose our-->
+<div class="why">
+    <div class="container-120">
+        <div class="title">
+            <p class="title-first">Why <br> Choose Our</p>
+            <p class="title-last">Online Course</p>
+        </div>
+        <div class="box">
+            <div class="suggest">
+                <p class="suggest-number">01</p>
+                <div class="suggest-text">
+                    <p class="suggest-text_main">Easy Registration</p>
+                    <p class="suggest-text_sub">Create your account now with several steps only</p>
+                </div>
+            </div>
+            <div class="suggest">
+                <p class="suggest-number">02</p>
+                <div class="suggest-text">
+                    <p class="suggest-text_main">Flexible Schedule</p>
+                    <p class="suggest-text_sub">You can learn anytime and anywhere without worries</p>
+                </div>
+            </div>
+            <div class="suggest">
+                <p class="suggest-number">03</p>
+                <div class="suggest-text">
+                    <p class="suggest-text_main">Learn From Expert</p>
+                    <p class="suggest-text_sub">We only choose experienced instructors for courses</p>
+                </div>
+            </div>
+        </div>
+        <a class="look_for_more" href="#">
+            <p class="look_for_more-text">Look more for benefit of our online course</p>
+            <img src="./img/next.png" class="look_for_more-icon">
+        </a>
+    </div>
+</div>
+<!--end why choose our-->
+<!--member say-->
+<div class="member_say">
+    <div class="container-120">
+        <div class="title">
+            <p class="title-first">What <br>Member Say</p>
+            <p class="title-last">About Course</p>
+        </div>
+        <div class="say">
+            <p class="say-sub">Review from completed course</p>
+            <p class="say-title">Poetry Writing</p>
+            <p class="say-content">The course was presented in an enthusiastic way. The content can be related not only
+                the teory but also to events and situations in daily life. I can highly recommend it as an introduction
+                to Poetry Writing.</p>
+            <div class="writer">
+                <p class="writer-name">by : Kristin Watson</p>
+                <img src="./img/star.png" alt="star" width="195px">
+            </div>
+        </div>
+        <a class="more look_for_more" href="#">
+            <p class="look_for_more-text">Look for more testimonial from member</p>
+            <img src="./img/next.png" class="look_for_more-icon">
+        </a>
+    </div>
+</div>
+<!--end member say-->
+<!--plan-->
+<div class="plan">
+    <div class="box">
+        <div class="container-120">
+            <p class="title">Ready To Join With Us?</p>
+            <p class="sub_title">Here’s some package option for you to join COURSEVAL.</p>
+        </div>
+        <div class="card container-120">
+<!--            card 1-->
+            <div class="card-item">
+                <p class="card-item-title">Basic Plan</p>
+                <p class="card-item-price">$25</p>
+                <p class="card-item-month">/month</p>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Access up to 5 courses in month</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Daily assignment and answer</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Group discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">All course feature available</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">Weekly reward for improvements</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">1 on 1 discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">Consulting and counseling service</p>
+                </div>
+                <button class="button-white">Enroll Now</button>
+            </div>
+<!--            card 2-->
+            <div class="card-item middle">
+                <p class="card-item-title">Favorite Plan</p>
+                <p class="card-item-price">$40</p>
+                <p class="card-item-month">/month</p>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Access up to 5 courses in month</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Daily assignment and answer</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Group discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">All course feature available</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Weekly reward for improvements</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">1 on 1 discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/uncheck-icon.png" class="line-icon">
+                    <p class="line-content">Consulting and counseling service</p>
+                </div>
+                <button class="button-primary">Enroll Now</button>
+            </div>
+<!--            card 3-->
+            <div class="card-item">
+                <p class="card-item-title">Super Plan</p>
+                <p class="card-item-price">$70</p>
+                <p class="card-item-month">/month</p>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Access up to 5 courses in month</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Daily assignment and answer</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Group discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">All course feature available</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Weekly reward for improvements</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">1 on 1 discussion with Instructor</p>
+                </div>
+                <div class="line">
+                    <img src="./img/check-icon.png" class="line-icon">
+                    <p class="line-content">Consulting and counseling service</p>
+                </div>
+                <button class="button-white">Enroll Now</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end plan-->
 </body>
 </html>
